fix name alignment in mobile

--- a/css/style.css
+++ b/css/style.css
@@ -304,7 +304,7 @@ main {
 .hero-name {
   font-size: 1.5rem;
   font-weight: 600;
-  color: var(--text-primry);
+  color: var(--text-primary);
   margin-bottom: 0.5rem;
 }
 
